--- a/src/components/css/header.css
+++ b/src/components/css/header.css
@@ -1,34 +1,35 @@
 .header {
-    background-color: #FFFFFF; /* Example background color */
+    background-color: #FFFFFF;
     padding: 20px;
-}
-
-.navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-left: 17%;
+    max-height: 40px;
 }
 
+
 .search-container {
-    padding : 5px 10px ;
-    margin-right: 10px; /* Adjust as needed */
+    margin-left: 20%;
+    position: relative;
+    padding: 8px;
     background:#F5F5F5 ;
     border: 1px solid #DDD;
     border-radius: 5px;
-    width: 300px;
-    align-items: center;
-}
-.search:focus{
-   outline: none;
-}
-.search
-{   padding-left: 10px;
-    border: 0;
-    background:#F5F5F5;
-    text-decoration: none;
+    width: 100% ;
 
 }
-/* In your CSS file (header.css) */
+.search-input:focus{
+   outline: none;
+}
+.search-input
+{   border: none;
+    background:#F5F5F5;
+    padding-left: 30px; /* Adjust based on the icon width */
+    width: 80%;
+
+}
+
 .feather-icon {
     width: 1.2em;
     height: 1.2em;
@@ -38,10 +39,18 @@
 {
     color: gray;
     cursor: pointer;
+    position: absolute;
+    left: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+
 }
 .connexion-container {
     display: flex;
     align-items: center;
+    font-family: 'Poppins', sans-serif;
+    width: 100% ;
+
 }
 
 .notifaction-container {
@@ -50,18 +59,91 @@
     border-color: black;
 
 }
-#bar
-{
-    color: gray;
-    margin: auto 10px auto ;
-}
-.connexion-container
-{
+.connexion-content {
+     display: flex;
+     align-items: center;
+     border: 2px none grey;
+     border-left-style: solid;
+     margin-right: 5px;
+    height: 20px;
+
+ }
+
+.user-info {
+
     margin-left: 10px;
+    display: flex;
+    align-items: center;
 }
-#link
+
+.user-info img {
+    border-radius: 50%;
+    width: 30px; /* Adjust size as needed */
+    height: 30px; /* Adjust size as needed */
+    margin-right: 10px;
+}.dropdown-container {
+     position: relative;
+     display: inline-block; /* Ensures the container only takes the width it needs */
+
+ }
+
+.chevronDown-icon,.chevronUp-icon {
+    cursor: pointer; /* Ensure cursor changes to pointer when hovering */
+    margin-right: 5px;
+    margin-left: 5px;
+}
+
+.dropdown-content {
+    margin-top: 15px;
+    margin-right: 20px;
+    border: none;
+    display: none;
+    position: absolute;
+    right: 20px;
+    background:#F5F5F5;
+    z-index: 1;
+    text-decoration: none;
+
+}
+.dropdown-content::after {
+    content: '';
+    position: absolute;
+    bottom: 100%; /* Position the arrow above the content */
+    right: 10px; /* Adjust the position of the arrow */
+    border-width: 8px;
+    border-style: solid;
+    border-color: #DDD transparent transparent transparent;
+}.dropdown-content ul {
+     list-style-type: none;
+     padding: 0;
+     margin: 0;
+     display: flex; /* Use flexbox */
+     flex-direction: column; /* Align items vertically */
+     align-items: center; /* Center items horizontally */
+     width: 100px;
+     border: 3px none black;
+     border-right-style: solid;
+ }
+
+.dropdown-content ul li {
+    padding: 10px 0;
+    width: 100%; /* Make the list items take up full width */
+    text-align: center; /* Center text */
+
+
+
+}
+
+.dropdown-content ul li:hover {
+
+    cursor: pointer; /* Change cursor style when hovering */
+    background: rgba(128, 128, 128, 0.76);
+}
+
+.dropdown-container:hover .dropdown-content {
+    display: block;
+}
+.dropdown-content ul li .feather-icon
 {
-
+    margin-right: 10px;
 }
-
-/* Add additional styling as needed */
