--- a/src/components/Dashboard/Turnover.css
+++ b/src/components/Dashboard/Turnover.css
@@ -1,22 +1,82 @@
 .second-container
 {
-    border: 1px solid black;
+
     height: 400px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-left: 17%;
+    margin-right: 20px;
+    margin-top: 20px;
 }
 .graph-container
 {
-    background: red;
     width: 60%;
-    margin: 20px;
-    border-radius: 10px;
+
 }
 .selling-container
-{    background: blue;
-    width: 30%;
+{
+    width: 20%;
+}
+.graph-container , .selling-container
+{
+    background: #FFFFFF;
+    padding: 10px;
     margin: 20px;
     border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add shadow */
+
+}
+.months ul
+{
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.months ul li
+{
+    border: 1px solid #D9D9D9;
+    background: #D9D9D9;
+    border-radius: 20px;
+    padding: 2px;
+    font-size: 14px;
+}
+.months ul li:hover
+{
+    background: #0ae146;
+    color: #FFFFFF;
+    cursor: pointer;
+}
+.graph
+{
+    border: 1px solid #D9D9D9;
+    height: 210px;
+}
+.selling-container ul li
+{
+    list-style: none;
+    margin-top: 10px;
+    color: rgba(128, 128, 128, 0.76);
+}
+.title-items
+{
+    border: 1.5px none #9f9c9c;
+    border-bottom-style: solid;
+    display: flex;
+    flex-direction: row;
+
+}
+.value
+{
+    margin-left: auto;
+    font-weight: bold;
+    justify-items: center;
+
+
+}
+.price {
+    font-weight: bold;
+    margin-left: 40px;
 }
