--- a/src/components/Dashboard/Turnover.css
+++ b/src/components/Dashboard/Turnover.css
@@ -1,7 +1,5 @@
 .second-container
 {
-
-    height: 400px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -34,25 +32,28 @@
     justify-content: space-around;
     margin-top: 10px;
     margin-bottom: 10px;
+    font-weight: 600;
 }
 .months ul li
 {
-    border: 1px solid #D9D9D9;
-    background: #D9D9D9;
+
+    background: #f0f0f0; ;
     border-radius: 20px;
-    padding: 2px;
+    padding: 4px;
     font-size: 14px;
 }
-.months ul li:hover
-{
-    background: #0ae146;
-    color: #FFFFFF;
-    cursor: pointer;
+
+.months li:hover,
+.months li.selected {
+    background-color: #0ae146; /* Change background color when hovered or selected */
+    color: #333; /* Change text color when hovered or selected */
+    font-weight: bold; /* Optionally, make the text bold when hovered or selected */
+    cursor: pointer; /* Change cursor to indicate clickable */
 }
 .graph
 {
-    border: 1px solid #D9D9D9;
-    height: 210px;
+
+
 }
 .selling-container ul li
 {
