--- a/src/components/css/header.css
+++ b/src/components/css/header.css
@@ -1,4 +1,7 @@
 .header {
+    top: 0; /* Fix it to the top of the viewport */
+    left: 0;
+    right: 0;
     background-color: #FFFFFF;
     display: flex;
     justify-content: space-between;
@@ -6,8 +9,9 @@
     height: 48px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add shadow */
     margin: 0 0 50px 5em;
-
+    z-index: 1000; /* Ensure it's above other content */
 }
+
 
 .search-container {
     margin-left: 25%;
