--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,100,200,300);
 :root{
     --nav-width: 92px;
 
@@ -8,8 +8,8 @@
     --sub-color: #B6CEFC;
     --white-color: #FFF;
 
-    /*===== Fuente y tipografia =====*/
-    --body-font: 'Poppins', sans-serif;
+
+    --body-font:  "Raleway", sans-serif;
     --normal-font-size: 1rem;
     --small-font-size: .875rem;
 
@@ -22,11 +22,17 @@
 *,::before,::after{
     box-sizing: border-box;
 }
+body.sidebar-open {
+    padding-left: 150px; /* Adjust as needed based on the width of your sidebar */
+    transition: padding-left 0.3s ease;
+
+}
 body{
     position: relative;
     margin: auto;
     background: #F5F5F5;
     font-family: var(--body-font);
+    font: 16px/26px "Raleway", sans-serif;
     font-size: var(--normal-font-size);
     transition: .5s;
 }
