--- a/src/components/Dashboard/statistics.css
+++ b/src/components/Dashboard/statistics.css
@@ -1,22 +1,58 @@
-.statistics
-{
-    height: 150px;
-    background: #FFFFFF;
-    margin: 20px 40px 0 20px ;
-    border-radius: 10px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4); /* Add shadow */
+.statistics{
+    margin-bottom: 10px;
 }
 .stat-boxes
 {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    margin-right: 20px;
+    justify-content: space-around;
+}
+.content{
+    margin-left: 10px;
+    width: 48%;
 }
 .orders ,.sales,.articles
 {
-    border: 1px solid #D9D9D9;
     width: 30% ;
     margin-left: 5px;
+    display: flex;
     height: 150px;
+    border-radius: 15px;
+    background-color: white;
+}
+h3{
+    font-weight: 600;
+
+}
+h2{
+    font-weight: 400;
+    /*margin-top: 15px;*/
+}
+.arrow{
+    width: 20px;
+    height: 20px;
+    margin-right: 20px;
+}
+.state-arrow{
+    display: flex;
+    height: 0;
+    align-items: center;
+}
+.graph-top{
+    width: 40%;
+    margin-top: 28px;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    justify-content: center;
+}
+.value-pos{
+  color: #0ae146;
+  font-weight: 600;
+    padding:0 20px 30px 0;
+}
+.value-neg{
+    color: #F40C0C;
+    font-weight: 600;
+    padding:0 20px 30px 0;
 }
