--- a/src/components/css/header.css
+++ b/src/components/css/header.css
@@ -1,17 +1,13 @@
 .header {
-    top: 0; /* Fix it to the top of the viewport */
-    left: 0;
-    right: 0;
     background-color: #FFFFFF;
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 48px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add shadow */
-    margin: 0 0 50px 5em;
-    z-index: 1000; /* Ensure it's above other content */
-}
+    margin: 0 0 30px 5em;
 
+}
 
 .search-container {
     margin-left: 25%;
@@ -111,9 +107,10 @@
     display: none;
     position: absolute;
     right: 20px;
-    background:#F5F5F5;
+    background:#D9D9D9;
     z-index: 1;
     text-decoration: none;
+    transition: .5s;
 
 }
 .dropdown-content::after {
