--- a/src/components/sidebar/assets/css/styles.css
+++ b/src/components/sidebar/assets/css/styles.css
@@ -1,7 +1,5 @@
-/*===== GOOGLE FONTS =====*/
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap");
 
-/*===== VARIABLES CSS =====*/
 
 h1{
   margin: 0;
@@ -16,7 +14,6 @@ a{
 }
 
 
-/*===== l NAV =====*/
 .l-navbar{
   position: fixed;
   top: 0;
@@ -35,7 +32,6 @@ a{
   height: 80px;
   width: 80px;
 }
-
 .nav{
   height: 100%;
   display: flex;
@@ -51,11 +47,10 @@ a{
   margin-bottom: 2rem;
 }
 .nav__toggle{
-  font-size: 1.25rem;
   margin-left: 13px;
   cursor: pointer;
   color: black;
-margin-right: 10px;
+  margin-right: 10px;
 }
 .nav__logo{
   color: black;
@@ -67,10 +62,10 @@ margin-right: 10px;
   grid-template-columns: max-content max-content;
   align-items: center;
   column-gap: .75rem;
-  padding: .75rem;
+  padding: .70rem;
   color: black;
   border-radius: .5rem;
-
+  margin-bottom: 2px;
   transition: .3s;
   cursor: pointer;
 }
@@ -79,8 +74,8 @@ margin-right: 10px;
 }
 .nav__icon{
   font-size: 1.25rem;
+  width: 20px;
   color: black;
-
 }
 .nav__name{
   font-size: var(--small-font-size);
@@ -89,22 +84,18 @@ margin-right: 10px;
 }
 
 
-/*Expander menu*/
 .expander{
   width: calc(var(--nav-width) + 9.25rem);
 }
 
-/*Add padding body*/
 .body-pd{
   padding: 0 0 0 10rem;
 }
 
-/*Active links menu*/
 .active{
   background-color: #D9D9D9;
 }
 
-/*===== COLLAPSE =====*/
 .collapse{
   grid-template-columns: 20px max-content 1fr;
 }
@@ -124,12 +115,10 @@ margin-right: 10px;
   color: var(--white-color);
 }
 
-/*Show collapse*/
 .showCollapse{
   display: block;
 }
 
-/*Rotate icon*/
 .rotate{
   transform: rotate(180deg);
 }
