--- a/src/components/Login/styles.css
+++ b/src/components/Login/styles.css
@@ -1,198 +1,120 @@
-/*@import url(https://fonts.googleapis.com/css?family=Raleway:400,100,200,300);*/
-/** {*/
-/*  margin: 0;*/
-/*  padding: 0;*/
-/*}*/
+/* styles.css */
 
-/*h1 {*/
-/*  !* center the texts *!*/
-/*  text-align: center;*/
-/*  !* set the font size *!*/
-/*  font-size: 3em;*/
-/*  !* set the font family *!*/
-/*  font-family: "Raleway", sans-serif;*/
+.App {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  background-image: url("../../components/images/background.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
 
-/*  !* set the font weight *!*/
-/*  font-weight: 1500;*/
-/*  !* set the text color *!*/
-/*  color: #f1f2f2;*/
-/*  !* set the text shadow *!*/
-/*  text-shadow: 1px 1px 0px #777777;*/
-/*  !* set the padding *!*/
-/*  padding: 20px;*/
-/*  !* add some blank on the top of this text *!*/
-/*  margin-top: 130px;*/
+}
+.login-input
+{
+margin-top: 10px;
+  background-color: #ebcc90;
+  border: 1px solid  ;
+}
+.container {
+  width: 500px; /* Increase container width to accommodate both box and side image */
+  padding: 60px;
+}
 
+.box {
+  display: flex;
+  flex-direction: column; /* Adjust to column layout */
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(240, 240, 240, 0.5); /* Set the background color with transparency */
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s ease; /* Add transition for smooth translation */
+}
 
-/*}*/
+.image {
+  margin-bottom: 20px; /* Adjust margin for spacing */
+}
 
-/*a {*/
-/*  color: #666;*/
-/*  text-decoration: none;*/
-/*}*/
-/*a:hover {*/
-/*  color: #4e4d4d;*/
-/*}*/
+.image img {
+  width: 100px;
+  height: 100px;
+}
 
-/*input {*/
-/*  font: 16px/26px "Raleway", sans-serif;*/
-/*}*/
+.side-image {
+  margin-top: 20px; /* Adjust margin for spacing */
+}
 
-/*body {*/
-/*  color: #666;*/
-/*  background-color: #f1f2f2;*/
+.side-image img {
+  width: 200px; /* Adjust width as needed */
+  height: auto; /* Maintain aspect ratio */
+}
 
-/*  background-image: url("./images/Untitled design.svg");*/
-/*  background-repeat: no-repeat;*/
-/*  background-size: cover;*/
-/*  background-attachment: fixed;*/
-/*}*/
+.switch {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 20px; /* Adjust margin for spacing */
+}
 
-/*.root {*/
+.switch button {
+  padding: 10px 20px;
+  background-color: transparent;
+  color: black;
+  border: 2px solid transparent;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  font-weight: 600;
+  margin-right: 10px;
+}
 
-/*  border-radius: 20px;*/
-/*}*/
+.switch button.active {
 
+  border-color: grey;
+ border-left: none;
+  border-right: none;
+  border-top: none;
 
-/*.form-wrap {*/
-/*  position: relative;*/
-/*  width: 320px;*/
-/*  margin: 3em auto;;*/
-/*  box-shadow: 0px 1px 8px #bebebe;*/
-/*  -webkit-box-shadow: 0px 1px 8px #bebebe;*/
-/*  -moz-box-shadow: 0px 1px 8px #bebebe;*/
-/*  backdrop-filter: blur(10px) opacity(0.8) grayscale(50%);*/
-/*  background-color: rgba(255, 255, 255, 0.2);*/
-/*}*/
+}
 
-/*.form-wrap::before {*/
-/*  position: absolute;*/
-/*  top: 0;*/
-/*  left: 0;*/
-/*  right: 0;*/
-/*  bottom: 0;*/
-/*  background: inherit;*/
-/*  filter: blur(5px);*/
-/*  -webkit-filter: blur(5px);*/
-/*}*/
+.switch button:hover {
 
+}
 
-/*.form-wrap .tabs {*/
-/*  overflow: hidden;*/
-/*}*/
-/*.form-wrap .tabs h3 {*/
-/*  float: left;*/
-/*  width: 50%;*/
-/*}*/
-/*.form-wrap .tabs h3 a {*/
-/*  padding: 0.5em 0;*/
-/*  text-align: center;*/
-/*  font-weight: 400;*/
-/*  background-color: #e6e7e8;*/
-/*  display: block;*/
-/*  color: #666;*/
-/*}*/
-/*.form-wrap .tabs h3 a.active {*/
-/*  background-color: #fff;*/
-/*}*/
-/*.form-wrap .tabs-content {*/
-/*  padding: 1.5em;*/
+/* Add hover effect to the box */
+.box:hover {
+  transform: translateY(-5px); /* Move the box up slightly on hover */
+}/* styles.css */
 
+.input-wrapper {
+  display: flex;
+  align-items: center; /* Align items vertically */
+}
 
-/*}*/
-/*.form-wrap .tabs-content div[id$="tab-content"] {*/
-/*  display: none;*/
-/*}*/
-/*.form-wrap .tabs-content .active {*/
-/*  display: block !important;*/
-/*}*/
-/*.form-wrap form .input {*/
-/*  box-sizing: border-box;*/
-/*  -moz-box-sizing: border-box;*/
-/*  color: inherit;*/
-/*  font-family: inherit;*/
-/*  padding: 0.8em 0 10px 0.8em;*/
-/*  border: 1px solid #cfcfcf;*/
+.input-wrapper input {
+  margin-right: 10px; /* Add margin between input fields */
+}
 
-/*  outline: 0;*/
-/*  display: inline-block;*/
-/*  margin: 0 0 0.8em 0;*/
-/*  padding-right: 2em;*/
-/*  width: 100%;*/
-/*}*/
-/*.form-wrap form .button {*/
-/*  width: 100%;*/
-/*  padding: 0.8em 0 10px 0.8em;*/
-/*  background-color: #bebebe;*/
-/*  border: none;*/
-/*  color: #fff;*/
-/*  cursor: pointer;*/
-/*  text-transform: uppercase;*/
-/*  backdrop-filter: blur(10px) opacity(0.8) grayscale(50%);*/
-/*  transition: all 0.3s ease;*/
-/*}*/
-/*.form-wrap form .button:hover {*/
-/*  background-color: #4e4d4d;*/
-/*  backdrop-filter: blur(5px) opacity(1) grayscale(0%);*/
-/*}*/
-/*.form-wrap form .checkbox {*/
-/*  visibility: hidden;*/
-/*  padding: 20px;*/
-/*  margin: 0.5em 0 1.5em;*/
-/*}*/
-/*.form-wrap form .checkbox:checked + label:after {*/
-/*  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";*/
-/*  filter: alpha(opacity=100);*/
-/*  opacity: 1;*/
-/*}*/
-/*.form-wrap form label[for] {*/
-/*  position: relative;*/
-/*  padding-left: 20px;*/
-/*  cursor: pointer;*/
-/*}*/
-/*.form-wrap form label[for]:before {*/
-/*  content: "";*/
-/*  position: absolute;*/
-/*  border: 1px solid #cfcfcf;*/
+.input-wrapper input.name {
+  width: 48%; /* Set the width of each input field to 48% to fit in the container */
+}
 
-/*  width: 17px;*/
-/*  height: 17px;*/
-/*  top: 0px;*/
-/*  left: -14px;*/
-/*}*/
-/*.form-wrap form label[for]:after {*/
-/*  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";*/
-/*  filter: alpha(opacity=0);*/
-/*  opacity: 0;*/
-/*  content: "";*/
-/*  position: absolute;*/
-/*  width: 9px;*/
-/*  height: 5px;*/
-/*  background-color: transparent;*/
-/*  top: 4px;*/
-/*  left: -10px;*/
-/*  border: 3px solid #28a55f;*/
-/*  border-top: none;*/
-/*  border-right: none;*/
+.input-wrapper input.email {
+  width: 100%; /* Set the width of the email input field to 100% */
+}
 
-/*  -webkit-transform: rotate(-45deg);*/
-/*  -moz-transform: rotate(-45deg);*/
-/*  -o-transform: rotate(-45deg);*/
-/*  -ms-transform: rotate(-45deg);*/
-/*  transform: rotate(-45deg);*/
-/*}*/
-/*.form-wrap .help-text {*/
-/*  margin-top: 0.6em;*/
-/*}*/
-/*.form-wrap .help-text p {*/
-/*  text-align: center;*/
-/*  font-size: 14px;*/
-/*}*/
+.submit {
+  padding: 10px 60px;
+  cursor:pointer;
+  background-color: transparent;
+  font-weight: 600;
+  margin-top: 20px;
+  border-radius: 10px;
+}
 
-/*.tabs-content {*/
-/*  backdrop-filter: blur(10px) opacity(0.8) grayscale(50%);*/
-/*  background-color: rgba(255, 255, 255, 0.2);*/
-/*  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.25);*/
-/*}*/
-
+.submit:hover {
+  background-color: #ebcc90;;
+}
 
