--- a/src/pages/Client/client.css
+++ b/src/pages/Client/client.css
@@ -3,7 +3,7 @@
     margin-top: 60px;
     margin-left: 8rem;
     display: flex;
-
+    margin-right: 2.5em;
     justify-content: space-between;
 }
 h5{
