--- a/src/components/Dashboard/statistics.css
+++ b/src/components/Dashboard/statistics.css
@@ -17,7 +17,7 @@
     margin-left: 5px;
     display: flex;
     height: 150px;
-    border-radius: 15px;
+    border-radius: 14px 60px;
     background-color: white;
 }
 h3{
