--- a/stockproject/sm-frontend/src/components/Header/header.css
+++ b/stockproject/sm-frontend/src/components/Header/header.css
@@ -155,3 +155,70 @@
 {
     margin-right: 10px;
 }
+.dropdown-message {
+    position: absolute;
+    top: 40px; /* Adjust as needed */
+    right: -100px;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    padding: 5px;
+    z-index: 1000; /* Ensure it's above other elements */
+    width: 200px;
+    font-size:small;
+}
+
+.dropdown-message div {
+    margin-bottom: 5px;
+    font-size: 14px;
+}
+
+.dropdown-message div:last-child {
+    margin-bottom: 0;
+}
+
+.notification-container {
+    position: relative;
+    display: inline-block;
+}
+
+.notification-count {
+    position: absolute;
+    top: -5px;
+    right: 3px;
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    width: 15px;
+    height: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 12px;
+    font-weight: bold;
+}
+
+
+.notification-item {
+    padding: 5px;
+    border-bottom: 1px solid #eee;
+}
+.notification-item:hover {
+    background-color: #cccccc;
+}
+
+.notification-item:last-child {
+    border-bottom: none;
+}
+
+.notification-item div {
+  cursor: pointer;
+    font-size: 13px;
+    color: #333;
+}
+
+.notification-item span {
+    font-size: 12px;
+    color: #777;
+}
