--- a/stockproject/sm-frontend/src/pages/Client/client.css
+++ b/stockproject/sm-frontend/src/pages/Client/client.css
@@ -54,25 +54,35 @@ input:focus{
     font-size: 15px;
     cursor: pointer;
     margin-bottom: 20px;
-}
-table{
-    background-color: white;
-    width: 95%;
-    border-radius: 10px;
-}
+}table {
+     background-color: white;
+     border-radius: 10px;
+     width: 100%;
+     border-collapse: collapse;
+ }
+
 tr:nth-child(even) {
     background-color: #E7E5E5;
 }
-th, td {
 
+th, td {
     padding: 8px;
-    text-align: left;
     text-align: center;
 }
 
-.ttable{
-    width: 70%;
+th {
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    background-color: white;
 }
+
+.ttable {
+    width: 70%;
+    max-height: 500px; /* Adjust the height as needed */
+    overflow-y: auto;
+}
+
 .edit,.delete{
     border:none;
     padding: 0;
